# google-docs-api-types

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs
src/v1/documents/: alignment.rs  auto_text.rs  background.rs  body.rs  bullet.rs  bullet_alignment.rs  bullet_suggestion_state.rs  color.rs  column_break.rs  column_separator_style.rs  content_alignment.rs  content_direction.rs  dash_style.rs  dimension.rs  document.rs  document_style.rs  document_style_suggestion_state.rs  embedded_object.rs  embedded_object_border.rs  embedded_object_properties.rs  embedded_object_suggestion_state.rs  footer.rs  footnote.rs  footnote_reference.rs  glyph_type.rs  header.rs  horizontal_rule.rs  image_properties.rs  image_properties_suggestion_state.rs  inline_object.rs  inline_object_element.rs  inline_object_properties.rs  inline_object_properties_suggestion_state.rs  link.rs  linked_content_reference.rs  linked_content_reference_reference.rs  linked_content_reference_suggestion_state.rs  list.rs  list_properties.rs  list_properties_suggestion_state.rs  (+63 more)
src/v1/documents/request/: bullet_glyph_preset.rs  create_footer_request.rs  create_footnote_request.rs  create_footnote_request_footnote_reference_location.rs  create_header_request.rs  create_named_range_request.rs  create_paragraph_bullets_request.rs  delete_content_range_request.rs  delete_footer_request.rs  delete_header_request.rs  delete_named_range_request.rs  delete_named_range_request_named_range_reference.rs  delete_paragraph_bullets_request.rs  delete_positioned_object_request.rs  (+41 more)
tests/: v0_1.rs  v0_2.rs
