[package]
name = "google-docs-api-types"
version = "0.2.6"
authors = ["bouzuya <m@bouzuya.net>"]
description = "A library crate that provides types for the Google Docs API (unofficial)"
edition = "2021"
exclude = [".github", "docs"]
keywords = ["api", "docs", "gcloud", "google", "serde"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bouzuya/google-docs-api-types"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
anyhow = "1.0.82"
